Making the CLI import better w/ existing resources

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,8 @@ Metrics/ClassLength:
 
 Metrics/ModuleLength:
   Max: 165
+  Exclude:
+    - 'lib/skull_island/helpers/resource.rb'
 
 Metrics/CyclomaticComplexity:
   Max: 7
