--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,7 +33,7 @@ Metrics/BlockLength:
     - 'spec/**/*_spec.rb'
     - 'spec/spec_helper.rb'
 
-Layout/IndentHeredoc:
+Layout/HeredocIndentation:
   Enabled: false
 
 Security/Eval:
