--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 AllCops:
   TargetRubyVersion: 2.5
+  NewCops: enable
 
 Metrics/MethodLength:
   Max: 50
@@ -12,6 +13,14 @@ Layout/LineLength:
 
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
+
+Lint/ConstantDefinitionInBlock:
+  Exclude:
+    - 'spec/**/*_spec.rb'
+    - 'spec/spec_helper.rb'
+
+Lint/MissingSuper:
+  Enabled: false
 
 Lint/RaiseException:
   Enabled: true
@@ -71,6 +80,9 @@ Style/HashTransformValues:
 Style/NumericLiterals:
   Exclude:
     - 'spec/**/*_spec.rb'
+
+Style/OptionalBooleanParameter:
+  Enabled: false
 
 Style/SlicingWithRange:
   Enabled: true
