--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ cache: bundler
 rvm:
 - 2.5
 - 2.6
-before_install: gem install bundler -v 2.0.1
+- 2.7
+before_install: gem install bundler -v '~> 2.0'
 deploy:
   provider: rubygems
   api_key:
