--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
+env:
+  global:
+  - CC_TEST_REPORTER_ID=403b284cf8ed6f468a3d861a70b02c6cdec30225dfb435861b19a12cafbef426
 language: ruby
 cache: bundler
 rvm:
 - 3.0
+before_script:
+- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+- chmod +x ./cc-test-reporter
+- ./cc-test-reporter before-build
+after_script:
+- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 before_install: gem install bundler -v '~> 2.2'
 deploy:
   provider: rubygems
