--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 - chmod +x ./cc-test-reporter
 - ./cc-test-reporter before-build
 after_script:
-- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+- ./cc-test-reporter after-build -t simplecov --exit-code $TRAVIS_TEST_RESULT
 before_install: gem install bundler -v '~> 2.2'
 deploy:
   provider: rubygems
