--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,19 @@ language: ruby
 cache: bundler
 rvm:
 - 3.0
-before_script:
-- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-- chmod +x ./cc-test-reporter
-- ./cc-test-reporter before-build
-after_script:
-- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
 before_install: gem install bundler -v '~> 2.2'
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+after_script:
+  - ./cc-test-reporter format-coverage -t cobertura coverage/coverage.xml
+  - ./cc-test-reporter upload-coverage
+  - exit $TRAVIS_TEST_RESULT
+
 deploy:
   provider: rubygems
   api_key:
