feat: updating all dependencies and to ruby3.1

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,6 +61,9 @@ Metrics/BlockLength:
 Layout/HeredocIndentation:
   Enabled: false
 
+Naming/VariableNumber:
+  Enabled: false
+
 Security/Eval:
   Exclude:
     - 'lib/skull_island/cli.rb'
